--- a/style.css
+++ b/style.css
@@ -34,7 +34,9 @@ Global Styles
 }
 
 body {
-  background: url("./images/pattern-background-mobile.svg") no-repeat center;
+  background: url("./images/pattern-background-mobile.svg") top no-repeat;
+  background-color: var(--Pale-blue);
+  margin-top: 4rem;
 }
 main {
   display: flex;
@@ -47,7 +49,7 @@ main {
   text-align: center;
   width: 300px;
   max-width: 90%;
-  height: 90vh;
+  height: 80vh;
   background-color: rgb(255, 253, 253);
 }
 
@@ -90,48 +92,92 @@ main {
   border-radius: 8px;
   padding-top: 0.7rem;
   padding-bottom: 0.7rem;
+  margin-bottom: 1.5rem;
 }
 .component-iteractive-first {
   align-self: center;
 }
 
 .component-iteractive-first p:nth-child(1) {
-  /* font-size: 5rem; */
   font-family: var(--ff);
   font-weight: 600;
-  font-size: 1.3rem;
+  font-size: 0.95rem;
   color: var(--Dark-blue);
+}
+
+.component-iteractive-first p:nth-child(2) {
+  font-family: var(--ff);
+  color: var(--Desaturated-blue);
+  font-weight: 500;
+  font-size: 0.85rem;
+}
+
+.component-iteractive-second{
+  align-self: center;
 }
 
 .component-iteractive-second a {
-  text-decoration: none;
-  color: var(--Dark-blue);
+  color: var(--Bright-blue);
+  font-family: var(--ff);
+  font-weight: 600;
+  font-size: 0.8rem;
 }
 
+.component-iteractive-second a:hover{
+  opacity: 0.7;
+  text-decoration: none;
+}
+
+.component-button{
+  margin-left: 1rem;
+  margin-right: 1rem;
+  border-radius: 8px;
+  padding-top: 0.7rem;
+  padding-bottom: 0.7rem;
+  margin-bottom: 1.5rem;
+  background-color: var(--Bright-blue);
+}
+
+.component-button:hover{
+  opacity: 0.7;
+}
+
+.component-button button{
+border: none;
+background-color: var(--Bright-blue);
+font-family: var(--ff);
+  font-weight: 600;
+  font-size: 0.95rem;
+  color: var(--Very-pale-blue);
+}
+
+.component-cancel p{
+  font-family: var(--ff);
+  font-weight: 600;
+  font-size: 0.95rem;
+  color: var(--Desaturated-blue);
+}
+
+.component-cancel p:hover{
+  color: var(--Dark-blue)
+}
 footer {
   position: fixed;
   bottom: 0;
-  left: 50%;
+  left: 40%;
 }
 
 .attribution {
+  font-family: var(--ff);
   font-size: 11px;
-  text-align: center;
+  left: 40%;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
 @media screen and (min-width: 375px) {
-  /* body {
-    background: url("./images/pattern-background-desktop.svg") center;
-  } */
-  main {
-    /* width: 20%; */
-  }
-  .component-illustration {
-    /* max-width: 100%; */
-  }
-  .entire-component {
-    /* width: 50%; */
-  }
+  body {
+    background: url("./images/pattern-background-desktop.svg") top no-repeat;
+    background-color: var(--Pale-blue);
+  }  
 }
